--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,4 +18,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  name: long-chain-lambda-$(date +%Y-%m-%d-%H:%m:%s)
+  name: long-chain-lambda-$(date +%Y-%m-%d-%H%m%s)
